force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/ucinn_ascendv2__Endowment_Financials__c.object-meta.xml
<CustomObject>
    <description>Funds associated with a designation that generates income which are then given to beneficiaries of the designation.</description>
    <label>Endowment Financial</label>
    <nameField>
        <label>Endowment Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endowment Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>