force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Dean_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Dean_Revenue__c</fullName>
    <inlineHelpText>Dean&apos;s Revenue Portion of Endowment Income</inlineHelpText>
    <label>Dean Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>