force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Designation_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Code__c</fullName>
    <label>Designation Code</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ucinn_ascendv2__Designation__c.ucinn_ascendv2__CASE_Type__c</field>
            <operation>equals</operation>
            <value>Endowment &amp; Similar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Endowment Financials</relationshipLabel>
    <relationshipName>Endowment_Financials_Designation_Code</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>