force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Fund_Balance__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Endowment Fund Balance (Book Value at end of FY)</inlineHelpText>
    <label>Fund Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>