force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Fund_Balance_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Balance_Gain_Loss__c</fullName>
    <inlineHelpText>Fund Balance Gains/Loss</inlineHelpText>
    <label>Fund Balance Gain Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>