force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Fund_Balance_Reinvestment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Balance_Reinvestment__c</fullName>
    <inlineHelpText>Fund Balance Reinvestment</inlineHelpText>
    <label>Fund Balance Reinvestment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>