force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Fund_Balance_Transfers__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Balance_Transfers__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Fund Balance Transfers (Amounts transferred from other resources at the school/unit)</inlineHelpText>
    <label>Fund Balance Transfers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>