force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Fund_Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Beginning_Balance__c</fullName>
    <inlineHelpText>Beginning Fiscal Year Fund Balance (also known as Book Value or Principal Account)</inlineHelpText>
    <label>Fund Beginning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>