force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Gifts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gifts__c</fullName>
    <inlineHelpText>Fiscal Year Gifts Received</inlineHelpText>
    <label>Gifts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>