force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__GL_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__GL_Account_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation_Code__r.ucinn_ascendv2__G_L_Account__c</formula>
    <label>GL Account</label>
    <type>Text</type>
</CustomField>