force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Income_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Income_Formula__c</fullName>
    <formula>ucinn_ascendv2__Total_Endowment_Income__c  +  ucinn_ascendv2__Dean_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Spendable income for restricted fund purpose PLUS Dean&apos;s Revenue portion</inlineHelpText>
    <label>Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>