force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Income_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Income_Transfer__c</fullName>
    <description>Endowment Income Transfers</description>
    <label>Income Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>