force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Market_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Market_Value__c</fullName>
    <inlineHelpText>Fiscal Year End Market Value</inlineHelpText>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>