force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Market_Value_Per_Share__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Market_Value_Per_Share__c</fullName>
    <inlineHelpText>Fiscal Year Market Value per Share</inlineHelpText>
    <label>Market Value Per Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>