force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Other_Income__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Other_Income__c</fullName>
    <inlineHelpText>Endowment Income - Other Income (e.g. event income or sales and service income)</inlineHelpText>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>