force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Shares__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Shares__c</fullName>
    <inlineHelpText>Shares Owned</inlineHelpText>
    <label>Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>