force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Total_Endowment_Income__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Endowment_Income__c</fullName>
    <inlineHelpText>Total Endowment Income Designated for Restricted Fund Purpose</inlineHelpText>
    <label>Total Endowment Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>