force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Expenses__c</fullName>
    <inlineHelpText>Fiscal Year Total Expenses</inlineHelpText>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>