force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Total_Fund_Balance__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Fund_Balance__c</fullName>
    <inlineHelpText>Endowment Fund Balance (sub-total used on old comptroller reports; essentially the same as Book Value at end of FY)</inlineHelpText>
    <label>Total Fund Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>