force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/fields/ucinn_ascendv2__Total_Income_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Income_Sub_Total__c</fullName>
    <inlineHelpText>Total Income Sub-Total (Endowment Income Beginning Balance plus FY restricted income earned, along with any other additions/subtractions)</inlineHelpText>
    <label>Total Income Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>