force-app/main/default/objects/ucinn_ascendv2__Endowment_Financials__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Fiscal_Year__c</columns>
    <columns>ucinn_ascendv2__Designation_Code__c</columns>
    <columns>ucinn_ascendv2__GL_Account_Formula__c</columns>
    <columns>ucinn_ascendv2__Gifts__c</columns>
    <columns>ucinn_ascendv2__Dean_Revenue__c</columns>
    <columns>ucinn_ascendv2__Total_Expenses__c</columns>
    <columns>ucinn_ascendv2__Total_Endowment_Income__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>